--- a/admin-ms/src/main/webapp/public/bpm/editor-app/configuration/properties/document-text.html
+++ b/admin-ms/src/main/webapp/public/bpm/editor-app/configuration/properties/document-text.html
@@ -1,4 +1,4 @@
-<div class="modal" ng-controller="wendangControllerCtrl">
+<div class="modal" ng-controller="documentControllerCtrl">
     <div class="modal-dialog" style="width:85%;">
         <div class="modal-content">
 			<div class="modal-header">
@@ -6,7 +6,8 @@
 			    <h3>我的文档属性</h3>
 			</div>
 			<div class="modal-body">
-				<iframe id="iframepage" ng-src="{{iframesrc}}" width="100%" height="375px" scrolling="no"></iframe>
+				<!--<iframe id="iframepage" ng-src="{{iframesrc}}" width="100%" height="375px" scrolling="no"></iframe>-->
+				<p><textarea auto-focus class="form-control" ng-model="property.value" style="width:100%; height:100%; max-width: 100%; max-height: 100%; min-height: 200px"/></p>
 			</div>
 			<div class="modal-footer">
 				<button ng-click="cancel()" class="btn btn-primary" translate>ACTION.CANCEL</button>
